--- a/client/client.yaml
+++ b/client/client.yaml
@@ -13,13 +13,22 @@ server:
     port: 30020
 
 player_color:
-    - "#FF0000"
-    - "#00FF00"
-    - "#0000FF"
-    - "FFFF00"
-    - "FF00FF"
-    - "00FFFF"
-    - "800080"
-    - "FFA500"
+    - "#FFC0CB"
+    - "#FFA07A"
+    - "#FF6347"
+    - "#FF4500"
+    - "#FFD700"
+    - "#FF8C00"
+    - "#FF69B4"
+    - "#00CED1"
+    - "#00FF7F"
+    - "#008080"
+
+eliminated_color:
+    "#DDDDDD"
+
+token:
+    size: 10
+
 player:
     name: PLAYER1
